Closed
Bug 1627935
Opened 5 years ago
Closed 5 years ago
PrioritizedEventQueue::GetEvent doesn't return the correct priority value
Categories
(Core :: XPCOM, defect)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
mozilla77
Tracking | Status | |
---|---|---|
firefox77 | --- | fixed |
People
(Reporter: smaug, Assigned: smaug)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
This has affected the input event prioritization. We've been using the default values and not utilized the historical data which was working before bug 1382922.
Assignee | ||
Comment 1•5 years ago
|
||
Assignee | ||
Comment 2•5 years ago
|
||
One could possibly make larger changes to make the setup less error prone, but hopefully we'll
replace this code with the new scheduler relatively soon.
And the assertion there should still enforce correct behavior.
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5d092cac8c5e
PrioritizedEventQueue::GetEvent doesn't return the correct priority value, r=bas
Comment 4•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox77:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Updated•5 years ago
|
Has Regression Range: --- → yes
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•